[tool.poetry]
name = "fastai-bears"
version = "0.1.0"
description = "A bears classifier from fastai"
authors = ["Willebaldo Gómez <willebaldo.gomez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
jupyterlab = "^3.6.7"
fastai = "^2.7.0"
voila = "^0.3.8"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
